--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <button data-clear class = "span-two">CLEAR</button>
         <button data-delete>DEL</button>
-        <button data-operation>%</button>
+        <button data-operation>÷</button>
         <button data-number>7</button>
         <button data-number>8</button>
         <button data-number>9</button>
